--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -35,14 +35,15 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"/>
+
             <TextView
                 android:id="@+id/tv_error_message"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="25dp"
-                android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
+                android:layout_marginLeft="25dp"
                 android:layout_marginRight="25dp"
+                android:layout_marginTop="10dp"
                 android:padding="10dp"
                 android:text=""
                 android:textColor="@color/white"
@@ -58,19 +59,19 @@
 
     <Button
         android:id="@+id/btn_proceed"
-        android:background="@drawable/custom_edt_txt_account_border"
-        android:layout_weight="0.1"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="PROCEED"
-        android:gravity="center"
-        android:visibility="gone"
-        android:textColor="@color/white"
-        android:textStyle="bold"
-        android:layout_marginTop="10dp"
         android:layout_marginBottom="20dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:padding="2.5dp" />
+        android:layout_marginTop="10dp"
+        android:layout_weight="0.1"
+        android:background="@drawable/custom_edt_txt_account_border"
+        android:gravity="center"
+        android:padding="2.5dp"
+        android:text="PROCEED"
+        android:textColor="@color/white"
+        android:textStyle="bold"
+        android:visibility="gone" />
 
 </LinearLayout>
