--- a/app/src/main/res/values/google_maps_api.xml
+++ b/app/src/main/res/values/google_maps_api.xml
@@ -21,8 +21,8 @@
     string in this file.
     -->
 <!--    //perfect-->
- <!--<string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyC4fgX_yo5OG6t_V3N8nFxYoowbrPWqtOU</string>-->
-
+ <!--<string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyC4fgX_yo5OG6t_V3N8nFxYoowbrPWqtOU</string>
+-->
     //parapanangadi
    <!-- <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCA6UuZ9uwV4mj13ro0bFE2RTDICHALd6Y</string>-->
 //calicut town
@@ -36,8 +36,7 @@
 <!--    //Cheruvannur-->
 <!--    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCIiZ78WiqGkoFBTv1EoMGYvVsE3mtVxLk</string>-->
 
-<!--    //Kumaramputhur-->
-<!--    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDHX2HVYOUqQxun8NxZ4-V4kr5e74hqTSY</string>-->
+<!--    //Kumaramputhur--><!--    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDHX2HVYOUqQxun8NxZ4-V4kr5e74hqTSY</string>-->
 
 <!--    //Kattippara-->
 <!--    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDmpMYHeB-cl7zZmvdic7yzkevEP1TbxCE</string>-->
@@ -46,7 +45,7 @@
 <!--    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDaUb7MBfDEzRcYXjcA0fzZi-9e-rfaB24</string>-->
 
 <!--    //Vallapuzha-->
-    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDVS0SXNagmTYtPAZwUfni6cpNb2yESS3c</string>
+ <!--   <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDVS0SXNagmTYtPAZwUfni6cpNb2yESS3c</string>-->
 -->
 <!--&lt;!&ndash;    //Cherukkunnu&ndash;&gt;-->
 <!--    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBJNLV2fjMvcHRMMTWhzpzfs11CtwPILno</string>-->
@@ -64,37 +63,38 @@
  <!--   <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyD7lUVFkomiSdIXtQwnPLYzVo38kVncpVA</string>-->
 
 <!--    &lt;!&ndash;    //Cheranallur&ndash;&gt;-->
-  <!--  <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyC4uYTHANTrcaJby9e5BR4IpOOSjVFTm-Q</string>-->
+<!--    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyC4uYTHANTrcaJby9e5BR4IpOOSjVFTm-Q</string>-->
+    <!--amarambalam-->
+   <!-- <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBPuEnN-RpEgtmWB_wq3cG5j742_3Q3NNA</string>-->
 
-    <!--    //Kayanna-->
- <!--   <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAC0s_0bn9wqUU1iJ91Fw3mswQaAbirkHI</string>-->
 <!--panniyankara-->
-    <!--<string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAMdiGbC0JYE68XIWxKRcWdIMHeOBitzoA</string>-->
+   <!-- <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAMdiGbC0JYE68XIWxKRcWdIMHeOBitzoA</string>-->
 <!--   meppayur-->
-   <!-- <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAOOLr1_cmkqWch5D3Zc6XPw53CPFES11E</string>-->
+  <!-- <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCsmoxOwmrcsPhW6rgjjd8bJMM0oOSfBGY</string>-->
 <!--kadambazhipuram-->
     <!--<string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDPa8Py8Siaguix18fCSCaCeLa8yTgrpEg</string>-->
 <!--chathamangalam-->
-   <!-- <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDab8P-cXZQ7jVkOWuLdo1bwz1Q3hDt9OE</string>-->
+  <!-- <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDab8P-cXZQ7jVkOWuLdo1bwz1Q3hDt9OE</string>-->
 <!--irinave-->
    <!-- <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCWCDMBmPYPfrnFSsQBSL6T-99kWvwqtHE</string>-->
 <!--   nanminda-->
-  <!--  <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAc2Ild9yPOrectVVrK2cvpXxYF6tiy-vs</string>-->
+   <!--<string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAc2Ild9yPOrectVVrK2cvpXxYF6tiy-vs</string>-->
 <!--chekkiad-->
-<!--  <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyC4fgX_yo5OG6t_V3N8nFxYoowbrPWqtOU</string>-->
+ <!-- <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDSs7MrCgQyw8mKmifEJvkwOvwW_T8iRfk</string>-->
 <!--perambra-->
    <!-- <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCKWuHpfad_ZvyR4Fw0HE-bQC3mp98cDEQ</string>-->
 
    <!-- <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCKWuHpfad_ZvyR4Fw0HE-bQC3mp98cDEQ</string>-->
-
-<!--    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCPlZLg8xi_LSFO3D9q0cu_AoccVg45bIc</string>-->
-
-  <!--  <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBUyiKtgvyzUCaC_4NU79LycZZ-bvLCICI</string>
+<!--thekkumbhagam-->
+  <!--  <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCPlZLg8xi_LSFO3D9q0cu_AoccVg45bIc</string>
+-->
+<!--    kottur-->
+  <!--  <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBUyiKtgvyzUCaC_4NU79LycZZ-bvLCICI</string>-->
 -->
 <!--    atholi-->
-   <!-- <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAuCq1Kb9yJP3vTXA6WzaDB0NlwWR6FsCQ</string>-->
+    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAuCq1Kb9yJP3vTXA6WzaDB0NlwWR6FsCQ</string>
 <!--thiruvambadi-->
-<!--    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyB604ecFDJEdSKgaJU13IrLVSeRfnTxsAI</string>-->
+   <!-- <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyB604ecFDJEdSKgaJU13IrLVSeRfnTxsAI</string>-->
 
    <!-- <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCIiZ78WiqGkoFBTv1EoMGYvVsE3mtVxLk</string>-->
 
@@ -102,7 +102,7 @@
 
    <!-- <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDmpMYHeB-cl7zZmvdic7yzkevEP1TbxCE</string>-->
   <!--  mananthavady-->
-   <!-- <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDaUb7MBfDEzRcYXjcA0fzZi-9e-rfaB24</string>-->
+ <!--   <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDaUb7MBfDEzRcYXjcA0fzZi-9e-rfaB24</string>-->
 <!--cherukunnu-->
     <!--<string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBJNLV2fjMvcHRMMTWhzpzfs11CtwPILno</string>-->
 <!--naduvil-->
@@ -110,19 +110,20 @@
 <!--porora-->
    <!-- <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCm7DVVrYMJPFTgxTGqvMQBZX0seGGwY0U</string>
 -->
-<!--    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyD7lUVFkomiSdIXtQwnPLYzVo38kVncpVA</string>-->
+    <!--kuttikattoor-->
+  <!--  <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyD7lUVFkomiSdIXtQwnPLYzVo38kVncpVA</string>-->
 
    <!-- <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyC4uYTHANTrcaJby9e5BR4IpOOSjVFTm-Q</string>-->
 
     <!-- <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDab8P-cXZQ7jVkOWuLdo1bwz1Q3hDt9OE</string>-->
-
- <!--  <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAC0s_0bn9wqUU1iJ91Fw3mswQaAbirkHI</string>-->
+<!--kayanna-->
+  <!-- <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAC0s_0bn9wqUU1iJ91Fw3mswQaAbirkHI</string>&ndash;&gt;-->
 <!--    mezhuvrli-->
    <!-- <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDofguc5hvUPhFegmfBN3buapv8ER-eops</string>-->
-
-<!--    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDVS0SXNagmTYtPAZwUfni6cpNb2yESS3c</string>-->
+<!--vallapuzha-->
+  <!--  <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDVS0SXNagmTYtPAZwUfni6cpNb2yESS3c</string>-->
     <!--  chemmanchery-->
 <!--    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCi-ZGfqbN2NhfyPMyGFinRWkodUCAJUeM</string>-->
 <!--pantheerankavu-->
-  <!--  <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyD9cX_5j437SVrfsi-yMuQp86Tk1Gw8HAU</string>-->
+  <!-- <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyD9cX_5j437SVrfsi-yMuQp86Tk1Gw8HAU</string>-->
 </resources>
