--- a/app/src/main/res/layout/activity_walletservice.xml
+++ b/app/src/main/res/layout/activity_walletservice.xml
@@ -9,15 +9,14 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="5dp"
         android:padding="10dp">
 
 
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:layout_marginLeft="5dp"
+            android:layout_height="180dp"
             android:background="@drawable/frontcard">
             <ImageView
                 android:layout_width="match_parent"
@@ -32,11 +31,10 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="2dp">
+                    android:layout_gravity="center">
                     <ImageView
-                        android:layout_width="30dp"
-                        android:layout_height="30dp"
+                        android:layout_width="25dp"
+                        android:layout_height="25dp"
                         android:layout_marginLeft="10dp"
                         android:layout_gravity="center_horizontal"
                         android:gravity="center"
@@ -60,7 +58,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
-                    android:layout_marginBottom="20dp"
                     android:orientation="vertical">
 
 
@@ -89,8 +86,8 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="15dp"
-                    android:layout_marginRight="15dp"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="5dp"
                     android:orientation="horizontal"
                     android:padding="10dp">
 
@@ -99,8 +96,7 @@
                             android:layout_height="match_parent"
                             android:orientation="horizontal"
                             android:gravity="center"
-                            android:layout_weight="1"
-                            android:padding="5dp">
+                            android:layout_weight="1">
                             <TextView
                                 android:id="@+id/txt_userdetails"
                                 android:layout_width="match_parent"
@@ -108,7 +104,6 @@
                                 android:textColor="@android:color/white"
                                 android:text="Customer Name :"
                                 android:textSize="12dp"
-                                android:paddingLeft="5dp"
                                 android:layout_weight="1"
                                 android:gravity="start"/>
                             <TextView
@@ -120,9 +115,9 @@
                                 android:paddingTop="5dp"
                                 android:textAllCaps="false"
                                 android:layout_weight="1"
-                                android:text="anusree"
+                                android:text=""
                                 android:textSize="12dp"
-                                android:gravity="start"/>
+                                android:gravity="right"/>
 
                         </LinearLayout>
                 </LinearLayout>
