--- a/app/src/main/res/layout/activity_walletservice.xml
+++ b/app/src/main/res/layout/activity_walletservice.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/light_gray">
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -127,6 +130,72 @@
             </LinearLayout>
         </androidx.cardview.widget.CardView>
     </LinearLayout>
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:cardCornerRadius="10dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="15dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:orientation="vertical">
+
+            <RelativeLayout
+                android:id="@+id/rltv_ownaccount"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/imgimps"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:scaleType="fitXY"
+                    android:layout_alignParentLeft="true"
+                    android:src="@drawable/icmt_ownbank"/>
+
+                <TextView
+                    android:id="@+id/txt_imps"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:gravity="center"
+                    android:textStyle="bold"
+                    android:text="SELECT YOUR ACCOUNT"
+                    android:paddingLeft="10dp"
+                    android:layout_toRightOf="@+id/imgimps"
+                    android:textColor="@color/black"/>
+
+
+
+
+
+            </RelativeLayout>
+            <LinearLayout
+                android:id="@+id/ll_source_acc_list_own"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:visibility="visible"
+                android:layout_margin="5dp"
+                android:background="@color/grey">
+                <com.creativethoughts.iscore.Helper.FullLenghRecyclertview
+                    android:id="@+id/rv_source_acc_list_own"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+            </LinearLayout>
+
+
+
+
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -164,222 +233,41 @@
                     android:background="@drawable/toggle3"
                     android:src="@drawable/ic_right_arrow"/>
             </LinearLayout>
-            <!--<LinearLayout
-                android:id="@+id/ll_standnginstr"
+            <LinearLayout
+                android:id="@+id/ll_loadmoney"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
                 android:visibility="gone"
                 android:orientation="vertical">
-                <LinearLayout
-                    android:id="@+id/llReport"
-                    android:layout_width="match_parent"
+
+                <TextView
+                    android:id="@+id/tvTitle"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:layout_marginLeft="3dp"
-                    android:layout_marginRight="3dp"
-                    android:background="@drawable/gray_borderdark">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:layout_marginLeft="1dp"
-                        android:layout_marginRight="1dp"
-                        android:background="@drawable/settings_page_top">
-                        <ImageView
-                            android:layout_width="30dp"
-                            android:layout_height="30dp"
-                            android:src="@drawable/ic_summary"
-                            android:padding="2dp"
-                            tools:ignore="VectorDrawableCompat" />
-
-                        <TextView
-                            android:id="@+id/tvTitle"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical"
-                            android:text="Due Date list for upcoming two weeks"
-                            android:textColor="@color/white"
-                            android:textSize="15dp" />
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="@color/blue_variant3"
-                        android:orientation="horizontal"
-                        android:layout_marginLeft="3dp"
-                        android:layout_marginRight="3dp">
-
-                        <TextView
-                            android:id="@+id/tvSLNO"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical"
-                            android:layout_marginLeft="2dp"
-                            android:layout_marginTop="5dp"
-                            android:layout_marginRight="2dp"
-                            android:layout_marginBottom="5dp"
-                            android:layout_weight="3.9"
-                            android:gravity="center_horizontal"
-                            android:text="SN"
-                            android:textAlignment="gravity"
-                            android:textColor="@color/colorPrimaryDark"
-                            android:textSize="14sp"
-                            android:textStyle="bold" />
-
-                        <View
-                            android:layout_width="1dp"
-                            android:layout_height="match_parent"
-                            android:background="@color/colorPrimary" />
-
-                        &lt;!&ndash; <TextView
-                             android:id="@+id/txtv_AcntType"
-                             android:layout_width="match_parent"
-                             android:layout_height="wrap_content"
-                             android:layout_gravity="center_vertical"
-                             android:layout_marginLeft="2dp"
-                             android:layout_marginTop="5dp"
-                             android:layout_marginRight="2dp"
-                             android:layout_marginBottom="5dp"
-                             android:layout_weight="3.2"
-                             android:gravity="center_horizontal"
-                             android:text="AccountType"
-                             android:textAlignment="gravity"
-                             android:textColor="@color/colorPrimaryDark"
-                             android:textSize="14sp"
-                             android:textStyle="bold" />
-
-                         <View
-                             android:layout_width="1dp"
-                             android:layout_height="match_parent"
-                             android:background="@color/colorPrimary" />&ndash;&gt;
-
-                        <TextView
-                            android:id="@+id/txtv_Accno"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical"
-                            android:layout_marginLeft="2dp"
-                            android:layout_marginTop="5dp"
-                            android:layout_marginRight="2dp"
-                            android:layout_marginBottom="5dp"
-                            android:layout_weight="3"
-                            android:gravity="center_horizontal"
-                            android:text="Account No"
-                            android:textAlignment="gravity"
-                            android:textColor="@color/colorPrimaryDark"
-                            android:textSize="14sp"
-                            android:textStyle="bold" />
-
-                        <View
-                            android:layout_width="1dp"
-                            android:layout_height="match_parent"
-                            android:background="@color/colorPrimary" />
-
-
-                        <TextView
-                            android:id="@+id/tvamt"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical"
-                            android:layout_marginLeft="2dp"
-                            android:layout_marginTop="5dp"
-                            android:layout_marginRight="2dp"
-                            android:layout_marginBottom="5dp"
-                            android:layout_weight="3.5"
-                            android:gravity="center_horizontal"
-                            android:text="Amount *"
-                            android:textAlignment="gravity"
-                            android:textColor="@color/colorPrimaryDark"
-                            android:textSize="14sp"
-                            android:textStyle="bold" />
-
-
-                        <View
-                            android:layout_width="1dp"
-                            android:layout_height="match_parent"
-                            android:background="@color/grey" />
-
-
-                        <TextView
-                            android:id="@+id/txtv_Duedate"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="right|center"
-                            android:gravity="right|center"
-                            android:layout_marginLeft="2dp"
-                            android:layout_marginTop="5dp"
-                            android:layout_marginBottom="5dp"
-                            android:layout_weight="3.5"
-                            android:text="Duedate"
-                            android:textAlignment="gravity"
-                            android:textColor="@color/colorPrimaryDark"
-                            android:textSize="14sp"
-                            android:textStyle="bold" />
-                        <View
-                            android:layout_width="1dp"
-                            android:layout_height="match_parent"/>
-
-                        <TextView
-                            android:id="@+id/addReminder"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:layout_weight="4"
-                            android:text="**"
-                            android:paddingRight="8dp"
-                            android:layout_marginTop="5dp"
-                            android:layout_marginRight="2dp"
-                            android:layout_marginBottom="5dp"
-                            android:gravity="center_horizontal"
-                            android:textAlignment="gravity"
-                            android:textColor="@color/colorPrimaryDark"
-                            android:textSize="14sp"
-                            android:textStyle="bold"
-                            />
-
-                    </LinearLayout>
-
-                    <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/rv_standinginst"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="3dp"
-                        android:layout_marginRight="3dp"
-                        android:layout_marginBottom="3dp"
-                        android:background="@color/white" />
-
-
-                </LinearLayout>
+                    android:layout_gravity="center_vertical"
+                    android:text="Due Date list for upcoming two weeks"
+                    android:textColor="@color/white"
+                    android:textSize="15dp" />
             </LinearLayout>
             <LinearLayout
-                android:id="@+id/llreminder"
+                android:id="@+id/llministatement"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:gravity="center"
                 android:visibility="gone"
                 android:orientation="horizontal">
-                <ImageView
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_gravity="center"
-                    android:gravity="center"
-                    android:visibility="gone"
-                    android:paddingLeft="8dp"
-                    android:src="@drawable/addreminder"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:gravity="left"
-                    android:textStyle="bold|italic"
-                    android:textSize="13dp"
-                    android:text="@string/remainder"
-                    android:textColor="@color/red_btn_bg_color"/>
-            </LinearLayout>-->
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/rv_ministatmnt"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="3dp"
+                        android:layout_marginRight="3dp"
+                        android:layout_marginBottom="3dp"
+                        android:background="@color/white" />
+            </LinearLayout>
 
         </LinearLayout>
     </ScrollView>
