--- a/app/src/main/res/layout/activity_walletservice.xml
+++ b/app/src/main/res/layout/activity_walletservice.xml
@@ -133,6 +133,9 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="10dp"
         app:cardCornerRadius="10dp">
 
         <LinearLayout
@@ -144,50 +147,64 @@
             android:layout_marginRight="5dp"
             android:orientation="vertical">
 
-            <RelativeLayout
-                android:id="@+id/rltv_ownaccount"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:id="@+id/imgimps"
-                    android:layout_width="70dp"
-                    android:layout_height="70dp"
-                    android:scaleType="fitXY"
-                    android:layout_alignParentLeft="true"
-                    android:src="@drawable/icmt_ownbank"/>
-
-                <TextView
-                    android:id="@+id/txt_imps"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:gravity="center"
-                    android:textStyle="bold"
-                    android:text="SELECT YOUR ACCOUNT"
-                    android:paddingLeft="10dp"
-                    android:layout_toRightOf="@+id/imgimps"
-                    android:textColor="@color/black"/>
-
-
-
-
-
-            </RelativeLayout>
             <LinearLayout
-                android:id="@+id/ll_source_acc_list_own"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:visibility="visible"
-                android:layout_margin="5dp"
-                android:background="@color/grey">
-                <com.creativethoughts.iscore.Helper.FullLenghRecyclertview
-                    android:id="@+id/rv_source_acc_list_own"
+                android:layout_height="match_parent"
+                android:gravity="bottom"
+                android:layout_marginTop="10dp"
+                android:orientation="vertical">
+
+
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+                    <ImageButton
+                        android:layout_width="25dp"
+                        android:layout_height="25dp"
+                        android:layout_alignParentRight="true"
+                        android:visibility="visible"
+                        android:tint="@color/grey1"
+                        android:layout_marginLeft="15dp"
+                        android:layout_marginRight="15dp"
+                        android:background="@drawable/select_amnt_icon"/>
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:gravity="center_vertical"
+                        android:paddingEnd="8dp"
+                        android:text="@string/select_account"
+                        android:textColor="@color/text_secondary"
+                        android:textSize="14sp"
+                        android:layout_gravity="center_vertical"
+                        android:textStyle="normal"
+                        android:paddingRight="8dp" />
+
+
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="30dp"
+                    android:orientation="vertical">
+
+                    <Spinner
+                        android:id="@+id/spnAccountNum"
+                        android:layout_width="match_parent"
+                        android:layout_height="40dp"
+                        android:layout_gravity="start"
+                        android:layout_marginTop="2dp"
+                        android:gravity="start"
+                        android:paddingLeft="5dp"
+                        android:background="@drawable/underline_drawable"
+                        android:popupBackground="#cccccc"
+                        android:spinnerMode="dialog"/>
+
+                </LinearLayout>
+
             </LinearLayout>
+
 
 
 
