sslcertificate live checking live updation.

--- a/app/src/main/res/layout/activity_walletservice.xml
+++ b/app/src/main/res/layout/activity_walletservice.xml
@@ -190,7 +190,7 @@
                     android:orientation="vertical">
 
                     <Spinner
-                        android:id="@+id/spnAccountNum"
+                        android:id="@+id/spn_account_type"
                         android:layout_width="match_parent"
                         android:layout_height="40dp"
                         android:layout_gravity="start"
