--- a/app/src/main/res/layout/activity_walletservice.xml
+++ b/app/src/main/res/layout/activity_walletservice.xml
@@ -271,18 +271,25 @@
                 android:id="@+id/llministatement"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:gravity="center"
                 android:visibility="gone"
-                android:orientation="horizontal">
+                android:orientation="vertical">
+
+                <androidx.cardview.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="15dp"
+                    app:cardCornerRadius="10dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:orientation="vertical">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:background="@color/blue_variant3"
-                    android:orientation="horizontal"
-                    android:layout_marginLeft="3dp"
-                    android:layout_marginRight="3dp">
+                    android:orientation="horizontal">
 
                     <TextView
                         android:id="@+id/tvSLNO"
@@ -358,8 +365,7 @@
                         android:id="@+id/txtv_Duedate"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="right|center"
-                        android:gravity="right|center"
+                        android:layout_gravity="center_vertical"
                         android:layout_marginLeft="2dp"
                         android:layout_marginTop="5dp"
                         android:layout_marginBottom="5dp"
@@ -372,15 +378,13 @@
 
 
                 </LinearLayout>
-
-                    <androidx.recyclerview.widget.RecyclerView
+                <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/rv_ministatmnt"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="3dp"
-                        android:layout_marginRight="3dp"
-                        android:layout_marginBottom="3dp"
                         android:background="@color/white" />
+                </LinearLayout>
+                </androidx.cardview.widget.CardView>
             </LinearLayout>
 
         </LinearLayout>
