--- a/app/src/main/res/layout/quick_pay_success_popup.xml
+++ b/app/src/main/res/layout/quick_pay_success_popup.xml
@@ -356,12 +356,12 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
+                        android:gravity="center"
                         android:text="Share"
                         android:textColor="@color/white"
                         android:textSize="20sp"
-                        android:gravity="center"
-                        android:textStyle="bold"
-                        android:layout_centerInParent="true"/>
+                        android:textStyle="bold" />
 
                 </RelativeLayout>
 
