--- a/app/src/main/res/xml/provider_paths.xml
+++ b/app/src/main/res/xml/provider_paths.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<paths  >
-    <external-path name="Download" path="Download"/>
+<!--<paths  >-->
+<!--    <external-path name="Download" path="Download"/>-->
+<!--</paths>-->
+<paths>
+    <external-path name="external_files" path="."/>
 </paths>
